# kairos

./: .coveragerc  AGENTS.md  README.md  pyproject.toml  run.sh  test_real_data.py
.trellis/: .template-hashes.json
config/: config.yaml.example
docs/: hermes-webhook-setup.md  trading-system.md  webhook-client-design.md
skills/bitlanglang-box/: SKILL.md
skills/bitlanglang-cycle/: SKILL.md
skills/bitlanglang-position/: SKILL.md
skills/bitlanglang-review/: SKILL.md
skills/bitlanglang-risk/: SKILL.md
skills/bitlanglang-scanner/: SKILL.md
skills/bitlanglang-signal/: SKILL.md
tests/: quick_test.py  test_analysis_box_pattern_boost.py  test_analysis_cycle_boost.py  test_analysis_support_resistance_boost.py  test_blacklist.py  test_cache_manager.py  test_cache_manager_full.py  test_coinglass_client.py  test_config.py  test_config_manager_full.py  test_config_manager_full2.py  test_config_validator_full.py  test_data_data_manager_boost.py  test_data_manager.py  test_data_manager_full.py  test_detectors_futures_metrics.py  test_detectors_price_velocity.py  test_detectors_volume_spike.py  test_error_handler.py  test_error_handler_full.py  test_exchanges_base.py  test_exchanges_base_extra.py  test_exchanges_binance_full.py  test_exchanges_bybit_full.py  test_exchanges_okx_full.py  test_funding_arb_boost.py  test_funding_arb_full.py  test_funding_monitor.py  test_funding_monitor_boost.py  test_funding_monitor_full.py  test_mcp_schema.py  test_mcp_server.py  test_mcp_server_full.py  test_mcp_server_regression.py  test_monitor_top_movers_full.py  test_paths.py  test_performance_monitor.py  test_performance_monitor_full.py  test_scanner.py  test_send_notifications_full.py  (+14 more)
(+78 files in other folders)
