[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kairos"
version = "1.0.0"
description = "Cryptocurrency trading agent system based on Bit浪浪's trading philosophy"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Xeron", email = "xeron2333@gmail.com" }]
dependencies = [
  "ccxt>=4.1.80",
  "pyyaml>=6.0.1",
  "expiringdict>=1.2.1",
  "pytz>=2024.1",
  "websockets>=11.0.3",
  "psutil>=7.0.0",
  "python-dotenv>=1.0.0",
  "websocket-client>=1.8.0",
  "numpy>=1.24.0",
  "tenacity>=8.0.0",
]

[project.urls]
Homepage = "https://github.com/Xeron2000/kairos"
Issues = "https://github.com/Xeron2000/kairos/issues"

[project.scripts]
kairos-mcp = "kairos.mcp_server:main"

[project.optional-dependencies]
dev = [
  "ruff>=0.6.0",
  "pytest>=7.4.0",
  "pytest-cov>=4.1.0",
  "pytest-mock>=3.11.1",
  "pytest-asyncio>=0.21.1",
  "bandit>=1.7.5",
  "safety>=3.0.0",
  "pip-audit>=2.7.3",
  "mypy>=1.14.1",
]
hermes = [
  "mcp>=1.0.0",
  "httpx>=0.27.0",
  "mplfinance>=0.12.10b0",
  "tenacity>=8.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/kairos"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[dependency-groups]
dev = [
  "ruff>=0.6.0",
  "pytest>=7.4.0",
  "pytest-cov>=4.1.0",
  "pytest-mock>=3.11.1",
  "pytest-asyncio>=0.21.1",
  "bandit>=1.7.5",
  "safety>=3.0.0",
  "pip-audit>=2.7.3",
  "mypy>=1.14.1",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
pythonVersion = "3.12"
pythonPlatform = "Linux"
typeCheckingMode = "basic"
